# YouTube_Video_Summarizer

./: main.py  pyproject.toml  video_transcript_reader.py
src/: Summarizer.py  __init__.py  config.py  exceptions.py  get_video.py  pipeline.py  prompts.py  text_similarity.py  utils.py  video_transcript_reader.py
