[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.198.0",
    "google-generativeai>=0.8.6",
    "httplib2>=0.32.0",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
    "youtube-transcript-api>=1.2.4",
]
